# evals

./: .gitignore  README.md  pyproject.toml
configs/: aime.yaml  endpoint-finetuned.example.yaml  endpoint.yaml  gpqa-diamond.yaml  terminal-bench.yaml
docs/: README.md  glm-5.2-benchmark-research.md  lambda-hosting.md  running-evals.md
docs/superpowers/specs/: 2026-07-09-aime26-glm-aligned-evaluation-design.md
evals/: __init__.py  reporting.py  vllm_adapter.py
results/: summary.md
results/raw/aime-pilot-2026-07-10_114342/: attempts.jsonl  report.md
scripts/: __init__.py  check_endpoint.py  deploy-vllm-service.sh  lm_eval_entrypoint.py  provision-lambda.sh  run_eval.py  vllm.service
tasks/: __init__.py
tasks/aime26/: __init__.py  aime26.yaml  utils.py
tests/: test_aime26.py  test_check_endpoint.py  test_deploy_vllm_service.py  test_reporting.py  test_run_eval.py  test_vllm_adapter.py
