[project]
name = "evals"
version = "0.1.0"
description = "Eval pipeline for models behind OpenAI-compatible endpoints"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "lm-eval[api]==0.4.12",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evals"]

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=8.3",
    "ruff>=0.8",
    "types-pyyaml>=6.0",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "ANN"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["lm_eval.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
